fixed alignment issues

--- a/frontend/src/Calendar/Day.css
+++ b/frontend/src/Calendar/Day.css
@@ -1,7 +1,7 @@
 .Hour {
     margin-top: -1px;
     margin-right: -1px;
-    height: 60px;
+    height: 59px;
     border-bottom: 1px solid #DCDCDC;
     border-left: 1px solid #DCDCDC;
     border-right: 1px solid #DCDCDC;
